[package]
name = "swerve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "swerve"
path = "src/lib.rs"

[[bin]]
name = "swerve_gui"
path = "src/app.rs"

[dependencies]
winit = { version = "0.30.2", features = ["rwh_05"] }
env_logger = "0.11.3"
log = "0.4"
wgpu = "0.20.1"